third_party/move/move-compiler-v2/tests/more-v1/expansion/use_inner_scope_invalid.exp

Diagnostics:
error: invalid use of reserved name
   ┌─ tests/more-v1/expansion/use_inner_scope_invalid.move:17:23
   │
17 │         use 0x2::M as Self;
   │                       ^^^^ Invalid module alias name 'Self'. 'Self' is restricted and cannot be used to name a module alias

error: invalid name
   ┌─ tests/more-v1/expansion/use_inner_scope_invalid.move:18:28
   │
18 │         use 0x2::M::{S1 as s1, Foo as foo};
   │                            ^^ Invalid struct alias name 's1'. Struct alias names must start with 'A'..'Z'

error: invalid name
   ┌─ tests/more-v1/expansion/use_inner_scope_invalid.move:18:39
   │
18 │         use 0x2::M::{S1 as s1, Foo as foo};
   │                                       ^^^ Invalid schema alias name 'foo'. Schema alias names must start with 'A'..'Z'
